--- a/namewebsite/name.html
+++ b/namewebsite/name.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container"></div>
-    <h1>Hello  <span id="udpdateContent">World!</span></h1><br>
+    <h1>Hello  <span id="updateContent">World!</span></h1><br>
     <button>click on me</button>
    <script src="name.js"></script> 
 </body>
