--- a/randompasswordgenerator/password.html
+++ b/randompasswordgenerator/password.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css " integrity="sha512-iecdLmaskl7CVkqkXNQ/ZmCULaMxtR+T2HydwQVDdH2LPlOCltKfG/eSrtxUkn" crossorigin="anonymous" referrerpolicy="no-referrer" / >
 </head>
 <body>
-    <div class="Randompassword"></div>
-    <h1>Generate a <br><span>Random password</span></h1>
-    <div class="password-generate">
-        <input type="text" id="password" readonly placeholder="Your Secure Password">
-        <button id="copy"><i class="fa-regular fa-copy"></i></button>
+    <div class="container">
+       <h1>Generate a <br><span>Random password</span></h1>
+        <div class="password-generate">
+          <input type="text" id="password" readonly placeholder="Your Secure Password">
+              <i class="fas fa-clipboard" id="Copy" title="Copy to clipboard"></i>
+               <br>
      
+        </div>
+      <button id="generate">Generate Password</button>
     </div>
     <script src="password.js"></script>
 </body>
