--- a/Randomnumbergenerator/number.html
+++ b/Randomnumbergenerator/number.html
@@ -14,7 +14,7 @@
         <br>
     </div>
     <br>
-    <button>Generate</button>   
+    <button id="generator">Generate</button>   
     <script src="number.js"></script>
 </body>
 </html>
