--- a/randompasswordgenerator/password.html
+++ b/randompasswordgenerator/password.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+      <div class="container-password-generator">
        <h1>Generate a <br><span>Random password</span></h1>
         <div class="password-generate">
           <input type="text" id="password" readonly placeholder="Your Secure Password">
@@ -16,7 +17,8 @@
                <br>
      
         </div>
-      <button id="generate">Generate Password</button>
+       <button id="generate">Generate Password</button>
+      </div>
     </div>
     <script src="password.js"></script>
 </body>
