--- a/randompasswordgenerator/password.html
+++ b/randompasswordgenerator/password.html
@@ -13,11 +13,11 @@
        <h1>Generate a <br><span>Random password</span></h1>
         <div class="password-generate">
           <input type="text" id="password" readonly placeholder="Your Secure Password">
-              <i class="fas fa-clipboard" id="Copy" title="Copy to clipboard"></i>
+          <i class="fa-regular fa-copy" id="copy"></i>
                <br>
      
         </div>
-       <button id="generate">Generate Password</button>
+       <button id="btn">Generate Password</button>
       </div>
     </div>
     <script src="password.js"></script>
