--- a/weadtherapp/index.html
+++ b/weadtherapp/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body><div>
     <input id="input-text" type="text" placeholder="enter the city"/>
     <button id="button-click">search</button>
+</div>
+    <div>
+        <h3 id="city-location">city name</h3>
+        <p id="timee">city time</p>
+        <h6 id="city-temp">city temp</h6>
+
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
